--- a/onetest.conf
+++ b/onetest.conf
@@ -10,7 +10,6 @@ update-url = https://raw.githubusercontent.com/chideap/MyShadowrocket/main/onete
 #RULE-SET,https://cdn.jsdelivr.net/gh/chideap/ios_rule_script/rule/Shadowrocket/Proxy/Proxy.list,PROXY
 #需要自己更新GeoIP2-CN，https://github.com/Hackl0us/GeoIP2-CN/raw/release/Country.mmdb
 GEOIP,CN,DIRECT
-IP-CIDR,101.124.19.122/32,PROXY,no-resolve
 FINAL,PROXY
 
 [Host]
@@ -36,6 +35,7 @@ cdn.pcbeta.css.inimc.com = 120.52.19.113
 [URL Rewrite]
 ^http://(www.)?g.cn https://www.google.com 302
 ^http://(www.)?google.cn https://www.google.com 302
+^http://(www.)?google.com.hk https://www.google.com 302
 
 [Script]
 #京东历史价格
@@ -43,71 +43,60 @@ cdn.pcbeta.css.inimc.com = 120.52.19.113
 #淘宝历史价格
 淘宝比价1 = type=http-request,pattern=^http://.+/amdc/mobileDispatch,requires-body=1,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/tb_price.js
 淘宝比价2 = type=http-response,pattern=^https?://trade-acs\.m\.taobao\.com/gw/mtop\.taobao\.detail\.getdetail,requires-body=1,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/tb_price.js
-crazyJoy挂机 = type=cron,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_crazy_joy_coin.js,cronexpr="24 5,12 * * *",timeout=200,enable=false
-京豆变动通知 = type=cron,cronexpr="2 9 * * *",timeout=3600,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_bean_change.js,enable=true
-领京豆额外奖励 = type=cron,cronexpr="10 1 * * *",timeout=3600,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_bean_home.js,enable=true
-东东超市兑换奖品 = type=cron,cronexpr="0 0 0 * * *",timeout=3600,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_blueCoin.js,enable=true
-口袋书店 = type=cron,cronexpr="1 8,12,18 * * *",timeout=3600,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_bookshop.js,enable=true
-京东汽车 = type=cron,cronexpr="10 2 * * *",timeout=3600,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_car.js,enable=true
-京东汽车兑换 = type=cron,cronexpr="1 0 * * *",timeout=3600,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_car_exchange.js,enable=true
-5G狂欢城 = type=cron,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_carnivalcity.js, cronexpr="0 0,6,12,18 * * *", timeout=3600, enable=true
-签到领现金 = type=cron,cronexpr="11 0 * * *",timeout=3600,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_cash.js,enable=true
-京喜财富岛 = type=cron,cronexpr="30 8,13,19 * * *",timeout=3600,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_cfd.js,enable=true
-摇京豆 = type=cron,cronexpr="5 0 * * *",timeout=3600,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_club_lottery.js,enable=true
-crazyJoy任务 = type=cron,cronexpr="10 3 * * *",timeout=3600,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_crazy_joy.js,enable=true
-监控crazyJoy分红 = type=cron,cronexpr="10 12 * * *",timeout=3600,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_crazy_joy_bonus.js,enable=true
-天天提鹅 = type=cron,cronexpr="10 * * * *",timeout=3600,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_daily_egg.js,enable=true
-京喜工厂 = type=cron,cronexpr="11 * * * *",timeout=3600,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_dreamFactory.js,enable=true
-京东家庭号 = type=cron,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_family.js, cronexpr="1 12,23 * * *", timeout=3600, enable=true
-东东农场 = type=cron,cronexpr="5 6-18/6 * * *",timeout=3600,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_fruit.js,enable=true
-获取互助码 = type=cron,cronexpr="20 13 * * 6",timeout=3600,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_get_share_code.js,enable=true
-京东国际盲盒 = type=cron,cronexpr="0 9,12,20,21 * * *",timeout=3600,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_global_mh.js,enable=true
-环球挑战赛 = type=cron,cronexpr="0 9,12,20,21 2-22 2 *",timeout=3600,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_global.js,enable=true
-东东工厂 = type=cron,cronexpr="12 * * * *",timeout=3600,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_jdfactory.js,enable=true
-京东赚赚 = type=cron,cronexpr="10 4 * * *",timeout=3600,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_jdzz.js,enable=true
-京东宠汪汪 = type=cron,cronexpr="15 0-23/2 * * *",timeout=3600,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_joy.js,enable=true
-京东宠汪汪喂食 = type=cron,cronexpr="15 0-23/1 * * *",timeout=3600,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_joy_feedPets.js,enable=true
-宠汪汪强制为别人助力= type=http-request,pattern=^https:\/\/draw\.jdfcloud\.com\/\/common\/pet\/enterRoom\/h5\?invitePin=.*(&inviteSource=task_invite&shareSource=\w+&inviteTimeStamp=\d+&openId=\w+)?&reqSource=weapp|^https:\/\/draw\.jdfcloud\.com(\/mirror)?\/\/pet\/helpFriend\?friendPin,requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_joy_help.js
-宠汪汪积分兑换奖品 = type=cron,cronexpr="0 0-16/8 * * *",timeout=3600,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_joy_reward.js,enable=true
-宠汪汪邀请助力与赛跑助力 = type=cron,cronexpr="15 10 * * *",timeout=3600,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_joy_run.js,enable=true
-宠汪汪助力更新Token = type=http-response,pattern=^https:\/\/draw\.jdfcloud\.com(\/mirror)?\/\/api\/user\/addUser\?code=, requires-body=1, max-size=0, script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_joy_run.js
-宠汪汪助力获取Token = type=http-request,pattern=^https:\/\/draw\.jdfcloud\.com(\/mirror)?\/\/api\/user\/user\/detail\?openId=, max-size=0, script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_joy_run.js
-宠汪汪偷好友积分与狗粮 = type=cron,cronexpr="10 0-21/3 * * *",timeout=3600,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_joy_steal.js,enable=false
-京小兑 = type=cron,cronexpr="35 10 * * *",timeout=3600,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_jxd.js,enable=true
-京喜农场 = type=cron,cronexpr="0 9,12,18 * * *",timeout=3600,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_jxnc.js,enable=true
-京东快递签到 = type=cron,cronexpr="10 5 * * *",timeout=3600,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_kd.js,enable=true
-京东直播 = type=cron,cronexpr="10-20/5 12 * * *",timeout=3600,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_live.js,enable=true
-超级直播间红包雨 = type=cron,cronexpr="30,31 20-23/1 * * *",timeout=3600,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_live_redrain.js,enable=true
-5G超级盲盒 = type=cron,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_mohe.js, cronexpr="0 0,1-23/3 * * *", timeout=3600, enable=true
-京东摇钱树 = type=cron,cronexpr="3 0-23/2 * * *",timeout=3600,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_moneyTree.js,enable=true
+京豆变动通知 = type=cron,cronexpr="2 9 * * *",timeout=360,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_bean_change.js,enable=true
+领京豆额外奖励 = type=cron,cronexpr="10 1 * * *",timeout=360,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_bean_home.js,enable=true
+东东超市兑换奖品 = type=cron,cronexpr="0 0 0 * * *",timeout=360,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_blueCoin.js,enable=true
+口袋书店 = type=cron,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_bookshop.js,cronexpr="1 8,12,18 * * *",timeout=360,enable=true
+京东汽车 = type=cron,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_car.js,cronexpr="10 2 * * *",timeout=360,enable=true
+京东汽车兑换 = type=cron,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_car_exchange.js,cronexpr="1 0 * * *",timeout=360,enable=true
+5G狂欢城 = type=cron,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_carnivalcity.js, cronexpr="0 0,6,12,18 * * *", timeout=360, enable=true
+签到领现金 = type=cron,cronexpr="11 0 * * *",timeout=360,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_cash.js,enable=true
+京喜财富岛 = type=cron,cronexpr="30 8,13,19 * * *",timeout=360,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_cfd.js,enable=true
+摇京豆 = type=cron,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_club_lottery.js,cronexpr="5 0 * * *",timeout=360,enable=true
+天天提鹅 = type=cron,cronexpr="10 * * * *",timeout=360,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_daily_egg.js,enable=true
+京喜工厂 = type=cron,cronexpr="11 * * * *",timeout=360,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_dreamFactory.js,enable=true
+京东家庭号 = type=cron,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_family.js, cronexpr="1 12,23 * * *", timeout=360, enable=true
+东东农场 = type=cron,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_fruit.js,cronexpr="5 6-18/6 * * *",timeout=360,enable=true
+获取互助码 = type=cron,cronexpr="20 13 * * 6",timeout=360,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_get_share_code.js,enable=true
+京东国际盲盒 = type=cron,cronexpr="0 9,12,20,21 * * *",timeout=360,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_global_mh.js,enable=true
+环球挑战赛 = type=cron,cronexpr="0 9,12,20,21 2-22 2 *",timeout=360,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_global.js,enable=true
+东东工厂 = type=cron,cronexpr="12 * * * *",timeout=360,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_jdfactory.js,enable=true
+京东赚赚 = type=cron,cronexpr="10 4 * * *",timeout=360,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_jdzz.js,enable=true
+京小兑 = type=cron,cronexpr="35 10 * * *",timeout=360,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_jxd.js,enable=true
+京喜农场 = type=cron,cronexpr="0 9,12,18 * * *",timeout=360,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_jxnc.js,enable=true
+京东快递签到 = type=cron,cronexpr="10 5 * * *",timeout=360,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_kd.js,enable=true
+京东直播 = type=cron,cronexpr="10-20/5 12 * * *",timeout=360,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_live.js,enable=true
+超级直播间红包雨 = type=cron,cronexpr="30,31 20-23/1 * * *",timeout=360,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_live_redrain.js,enable=true
+5G超级盲盒 = type=cron,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_mohe.js, cronexpr="0 0,1-23/3 * * *", timeout=360, enable=true
+京东摇钱树 = type=cron,cronexpr="3 0-23/2 * * *",timeout=360,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_moneyTree.js,enable=true
 京东秒秒币 = type=cron,cronexpr="10 7 * * *",timeout=200,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_ms.js,enable=true
-点点券 = type=cron,cronexpr="10 0,20 * * *",timeout=3600,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_necklace.js,enable=true
-女装盲盒 = type=cron,cronexpr="0 7 19-25 2 *",timeout=3600,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_nzmh.js,enable=true
-东东萌宠 = type=cron,cronexpr="15 6-18/6 * * *",timeout=3600,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_pet.js,enable=true
-京东金融养猪猪 = type=cron,cronexpr="12 * * * *",timeout=3600,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_pigPet.js,enable=true
-京东种豆得豆 = type=cron,cronexpr="1 7-21/2 * * *",timeout=3600,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_plantBean.js,enable=true
-京东保价 = type=cron,cronexpr="0 2 * * *",timeout=3600,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_price.js,enable=false
-京东全民开红包 = type=cron,cronexpr="1 1,2,23 * * *",timeout=3600,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_redPacket.js,enable=true
-闪购盲盒 = type=cron,cronexpr="20 8 * * *",timeout=3600,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_sgmh.js,enable=true
-进店领豆 = type=cron,cronexpr="2 0 * * *",timeout=3600,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_shop.js,enable=true
-东东小窝 = type=cron,cronexpr="16 22 * * *",timeout=3600,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_small_home.js,enable=true
-天天加速 = type=cron,cronexpr="8 0-23/3 * * *",timeout=3600,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_speed.js,enable=false
-京东极速版红包 = type=cron,cronexpr="0 0 * * *",timeout=3600,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_speed_redpocke.js,enable=false
-京东极速版 = type=cron,cronexpr="0 7 * * *",timeout=3600,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_speed_sign.js,enable=false
-东东超市 = type=cron,cronexpr="13 * * * *",timeout=3600,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_superMarket.js,enable=true
-赚京豆 = type=cron,cronexpr="11 7 * * *",timeout=3600,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_syj.js,enable=true
-取关京东店铺商品 = type=cron,cronexpr="50 23 * * *",timeout=3600,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_unsubscribe.js,enable=false
-手机尚学季 = type=cron,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_xtg.js, cronexpr="0 0 0 * * *", timeout=3600, enable=true
-京喜签到 = type=cron,cronexpr="8 0 * * *",timeout=3600,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jx_sign.js,enable=true
-东东健康社区 = type=cron,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_health.js, cronexpr="0 0,6,12,18 * * *", timeout=3600, enable=true
+点点券 = type=cron,cronexpr="10 0,20 * * *",timeout=360,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_necklace.js,enable=true
+女装盲盒 = type=cron,cronexpr="0 7 19-25 2 *",timeout=360,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_nzmh.js,enable=true
+东东萌宠 = type=cron,cronexpr="15 6-18/6 * * *",timeout=360,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_pet.js,enable=true
+京东金融养猪猪 = type=cron,cronexpr="12 * * * *",timeout=360,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_pigPet.js,enable=true
+京东种豆得豆 = type=cron,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_plantBean.js,cronexpr="1 7-21/2 * * *",timeout=360,enable=true
+京东保价 = type=cron,cronexpr="0 2 * * *",timeout=360,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_price.js,enable=false
+京东全民开红包 = type=cron,cronexpr="1 1,2,23 * * *",timeout=360,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_redPacket.js,enable=true
+闪购盲盒 = type=cron,cronexpr="20 8 * * *",timeout=360,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_sgmh.js,enable=true
+进店领豆 = type=cron,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_shop.js,cronexpr="2 0 * * *",timeout=360,enable=true
+东东小窝 = type=cron,cronexpr="16 22 * * *",timeout=360,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_small_home.js,enable=true
+天天加速 = type=cron,cronexpr="8 0-23/3 * * *",timeout=360,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_speed.js,enable=false
+京东极速版红包 = type=cron,cronexpr="0 0 * * *",timeout=360,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_speed_redpocke.js,enable=false
+京东极速版 = type=cron,cronexpr="0 7 * * *",timeout=360,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_speed_sign.js,enable=false
+东东超市 = type=cron,cronexpr="13 * * * *",timeout=360,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_superMarket.js,enable=true
+赚京豆 = type=cron,cronexpr="11 7 * * *",timeout=360,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_syj.js,enable=true
+取关京东店铺商品 = type=cron,cronexpr="50 23 * * *",timeout=360,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_unsubscribe.js,enable=false
+手机尚学季 = type=cron,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_xtg.js, cronexpr="0 0 0 * * *", timeout=360, enable=true
+京喜签到 = type=cron,cronexpr="8 0 * * *",timeout=360,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jx_sign.js,enable=true
+东东健康社区 = type=cron,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_health.js, cronexpr="0 0,6,12,18 * * *", timeout=360, enable=true
 微博 = type=http-response,requires-body=true,pattern=^https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua),max-size=1048576,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/wb_launch.js
 微博去广告 = type=http-response,requires-body=true,max-size=1048576,pattern=^https?://m?api\.weibo\.c(n|om)/2/(statuses/(unread|extend|positives/get|(friends|video)(/|_)(mix)?timeline)|stories/(video_stream|home_list)|(groups|fangle)/timeline|profile/statuses|comments/build_comments|photo/recommend_list|service/picfeed|searchall|cardlist|page|!/photos/pic_recommend_status|video/tiny_stream_video_list|photo/info),script-path=https://raw.githubusercontent.com/yichahucha/surge/master/wb_ad.js
 获取京东Cookie = type=http-request,requires-body=1,pattern=^https:\/\/(api\.m|me-api|ms\.jr)\.jd\.com\/(client\.action\?functionId=signBean|user_new\/info\/GetJDUserInfoUnion\?|gw\/generic\/hy\/h5\/m\/appSign\?),script-path=https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js
-京东多合一签到 = type=cron,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js,cronexpr="0 0 * * *",timeout=60,enable=true
+京东多合一签到 = type=cron,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js,cronexpr="0 0 * * *",timeout=60,enable=false
 京东白条 = type=cron,script-path=https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_baiTiao.js,cronexpr="0 9 * * *",timeout=20,enable=false
-京东抽奖机 = type=cron,script-path=https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_lotteryMachine.js,cronexpr="11 1 * * *",timeout=120,enable=true
-京东排行榜 = type=cron,script-path=https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_rankingList.js,cronexpr="11 9 * * *",timeout=120,enable=true
-京东特权值 = type=cron,script-path=https://raw.githubusercontent.com/iisams/Scripts/master/liwo/jdtqz.js,cronexpr="5 8 * * *",timeout=120,enable=true
+京东抽奖机 = type=cron,script-path=https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_lotteryMachine.js,cronexpr="11 1 * * *",timeout=120,enable=false
+京东排行榜 = type=cron,script-path=https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_rankingList.js,cronexpr="11 9 * * *",timeout=120,enable=false
+京东特权值 = type=cron,script-path=https://raw.githubusercontent.com/iisams/Scripts/master/liwo/jdtqz.js,cronexpr="5 8 * * *",timeout=120,enable=false
 爱奇艺获取Cookie = type=http-request,pattern=^https?:\/\/iface(\d)?\.iqiyi\.com\/,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js
 爱奇艺签到 = type=cron,cronexpr="0 10 * * *",timeout=120,script-path=https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js,enable=false
 Bilibili获取Cookie = type=http-request,pattern=^https:\/\/(www|live)\.bilibili\.com\/?.?,script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/bilibili/bilibili.cookie.js
