--- a/onetest.conf
+++ b/onetest.conf
@@ -36,7 +36,7 @@ hdslb.com = server:119.29.29.29
 [Script]
 京豆变动通知 = type=cron,cronexpr="2 9 * * *",timeout=360,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_bean_change.js,enable=false
 盒子 = type=http-request,pattern=^https?://boxjs.com,script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/chavy.box.js, requires-body=true, timeout=120
-iOS15美标空气质量 = type=http-response,script-path=iOS15_Weather_AQI_US.js,pattern=https://weather-data.apple.com/v2/weather/[\w-]+/-?[0-9]+\.[0-9]+/-?[0-9]+\.[0-9]+\?,requires-body=true,timeout=10,enable=ture
+iOS15美标空气质量 = type=http-response,script-path=iOS15_Weather_AQI_US.js,pattern=https://weather-data.apple.com/v2/weather/[\w-]+/-?[0-9]+\.[0-9]+/-?[0-9]+\.[0-9]+\?,requires-body=true,timeout=10,enable=true
 
 [MITM]
 enable = true
