--- a/onetest.conf
+++ b/onetest.conf
@@ -2,7 +2,7 @@
 bypass-system = true
 skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local, captive.apple.com
 tun-excluded-routes = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/12, 192.0.0.0/24, 192.0.2.0/24, 192.88.99.0/24, 192.168.0.0/16, 198.18.0.0/15, 198.51.100.0/24, 203.0.113.0/24, 224.0.0.0/4, 255.255.255.255/32
-dns-server = https://a.passcloud.xyz/dns-query, system, 119.29.29.29, 223.5.5.5
+dns-server = system, 119.29.29.29, 223.5.5.5
 ipv6 = true
 update-url = https://raw.githubusercontent.com/chideap/MyShadowrocket/main/onetest.conf
 
@@ -15,18 +15,6 @@ FINAL,PROXY
 [Host]
 localhost = 127.0.0.1
 *testflight.apple.com = server:8.8.4.4
-*.qq.com = server:119.28.28.28
-*.tencent.com = server:119.28.28.28
-*.weixin.com = server:119.28.28.28
-*.bilibili.com = server:119.29.29.29
-hdslb.com = server:119.29.29.29
-*.163.com = server:119.29.29.29
-*.126.com = server:119.29.29.29
-*.126.net = server:119.29.29.29
-*.127.net = server:119.29.29.29
-*.netease.com = server:119.29.29.29
-*.mi.com = server:119.29.29.29
-*.xiaomi.com = server:119.29.29.29
 
 [URL Rewrite]
 ^http://(www.)?g.cn https://www.google.com 302
