--- a/onetest.conf
+++ b/onetest.conf
@@ -15,6 +15,8 @@ update-url = https://raw.githubusercontent.com/chideap/MyShadowrocket/main/onete
 
 [Rule]
 #需要自己更新GeoIP2-CN，https://github.com/Hackl0us/GeoIP2-CN/raw/release/Country.mmdb
+DOMAIN-SUFFIX,cn,DIRECT
+GEOIP,CN,DIRECT
 DOMAIN-SUFFIX,touker.com,DIRECT
 DOMAIN-SUFFIX,alicdn.com,DIRECT
 DOMAIN-SUFFIX,zhangle.com,DIRECT
@@ -570,7 +572,6 @@ IP-CIDR,10.0.0.0/8,DIRECT
 IP-CIDR,172.16.0.0/12,DIRECT
 IP-CIDR,127.0.0.0/8,DIRECT
 
-GEOIP,CN,DIRECT
 FINAL,PROXY
 
 [Host]
