--- a/onetest.conf
+++ b/onetest.conf
@@ -1,7 +1,7 @@
 [General]
 bypass-system = true
 skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local, captive.apple.com
-tun-excluded-routes = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/12, 192.0.0.0/24, 192.0.2.0/24, 192.88.99.0/24, 192.168.0.0/16, 198.51.100.0/24, 203.0.113.0/24, 224.0.0.0/4, 255.255.255.255/32
+tun-excluded-routes = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/12, 192.0.0.0/24, 192.0.2.0/24, 192.88.99.0/24, 192.168.0.0/16, 198.51.100.0/24, 203.0.113.0/24, 224.0.0.0/4, 255.255.255.255/32, 239.255.255.250/32
 dns-server = system
 ipv6 = true
 prefer-ipv6 = false
@@ -10,6 +10,7 @@ dns-direct-system = false
 icmp-auto-reply = true
 always-reject-url-rewrite = false
 private-ip-answer = true
+# direct domain fail to resolve use proxy rule
 dns-direct-fallback-proxy = true
 update-url = https://raw.githubusercontent.com/chideap/MyShadowrocket/main/onetest.conf
 
@@ -250,6 +251,9 @@ DOMAIN-SUFFIX,qhimg.com,DIRECT
 DOMAIN-SUFFIX,qhres.com,DIRECT
 DOMAIN-SUFFIX,qidian.com,DIRECT
 DOMAIN-SUFFIX,qq.com,DIRECT
+DOMAIN-SUFFIX,wechat.com,DIRECT
+DOMAIN-SUFFIX,dns.pub,DIRECT
+DOMAIN-SUFFIX,doh.pub,DIRECT
 DOMAIN-SUFFIX,qyer.com,DIRECT
 DOMAIN-SUFFIX,qyerstatic.com,DIRECT
 DOMAIN-SUFFIX,raychase.net,DIRECT
@@ -357,6 +361,7 @@ DOMAIN,www-cdn.icloud.com.akadns.net,DIRECT
 DOMAIN-SUFFIX,aaplimg.com,DIRECT
 DOMAIN-SUFFIX,apple-cloudkit.com,DIRECT
 DOMAIN-SUFFIX,apple.co,DIRECT
+DOMAIN-SUFFIX,apple.news,DIRECT
 DOMAIN-SUFFIX,apple.com,DIRECT
 DOMAIN-SUFFIX,apple.com.cn,DIRECT
 DOMAIN-SUFFIX,appstore.com,DIRECT
@@ -581,10 +586,9 @@ localhost = 127.0.0.1
 ^http://(www.)?google.com.hk https://www.google.com 302
 
 [Script]
-京豆变动通知 = type=cron,cronexpr="2 9 * * *",timeout=360,script-path=https://raw.githubusercontent.com/lukesyy/jd_yun/main/jd_bean_change.js,enable=false
 盒子 = type=http-request,pattern=^https?://boxjs.com,script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/chavy.box.js, requires-body=true, timeout=120
 iOS15美标空气质量 = type=http-response,script-path=iOS15_Weather_AQI_US.js,pattern=https://weather-data.apple.com/v2/weather/[\w-]+/-?[0-9]+\.[0-9]+/-?[0-9]+\.[0-9]+\?,requires-body=true,timeout=10,enable=true
 
-[MITM]
-enable = true
-hostname = %APPEND% wq.jd.com, me-api.jd.com, trade-acs.m.taobao.com, api.m.jd.com, clientaccess.10086.cn, *.bilibili.com, music.163.com, draw.jdfcloud.com, jdjoy.jd.com, ios.baertt.com, app.kxp.com, wq.jd.com, act.10010.com, m.client.10010.com, ifac*.iqiyi.com, nebula.kuaishou.com, mp.weixin.qq.com, ms.jr.jd.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, ios.prod.ftl.netflix.com, api.21jingji.com, service.4gtv.tv, app.58.com, pic?.ajkimg.com, gw.alicdn.com, heic.alicdn.com, acs.m.taobao.com, m*.amap.com, api-new.app.acfun.cn, api.bjxkhc.com, *.amemv.com, *.snssdk.com, issuecdn.baidupcs.com, pan.baidu.com, newclient.map.baidu.com, mime.baidu.com, act.vip.iqiyi.com, app.bilibili.com, manga.bilibili.com, channel.beitaichufang.com, iapi.bishijie.com, app.api.ke.com, www.bodivis.com.cn, yxyapi*.drcuiyutao.com, cloud.189.cn, api.chelaile.net.cn, web.chelaile.net.cn, cap.caocaokeji.cn, api.caijingmobile.com, gw.csdn.net, m.ctrip.com, app.poizon.com, api.douban.com, rtbapi.douyucdn.cn, e.dangdang.com, daoyu.sdo.com, *.daydaycook.com, maicai.api.ddxq.mobi, mobile-api2011.elong.com, 123.59.31.1, 119.18.193.135, cube.elemecdn.com, i.ys7.com, www.flyertea.com, dsa-mfp.fengshows.cn, api.feng.com, *-release.wuta-cam.com, www.youtube.com, s.youtube.com, gateway.shouqiev.com, dl.app.gtja.com, prom.mobile.gome.com.cn, smkmp.96225.com, api.huomao.com, imeclient.openspeech.cn, api.intsig.net, ih2.ireader.com, nnapp.cloudbae.cn:0, ib-soft.net, www.inoreader.com, img*.360buyimg.com, api.jxedt.com, richmanapi.jxedt.com, *.kakamobi.cn, app-api.jinse.com, ios.wps.cn, *.kingsoft-office-service.com, api.gotokeep.com, api.kkmh.com, 122.14.246.33, 175.102.178.52, api.club.lenovo.cn, api.jr.mi.com, api-mifit*.huami.com, api.mgzf.com, cdn.moji.com, img.meituan.net, p*.meituan.net, s3plus.meituan.net, flowplus.meituan.net, capi.mwee.cn, mapi.mafengwo.cn, app.mixcapp.com, appconf.mail.163.com, c.m.163.com, client.mail.163.com, interface*.music.163.com, 59.111.181.*, sp.kaola.com, support.you.163.com, p.du.163.com, app-api.niu.com, slapi.oray.net, pss.txffp.com, api.yangkeduo.com, api.pinduoduo.com, mrobot.pconline.com.cn, mrobot.pcauto.com.cn, open.qyer.com, media.qyer.com, api.qbb6.com, mage.if.qidian.com, msspjh.emarbox.com, api.rr.tv, weibointl.api.weibo.cn, tqt.weibo.cn, *.k.sohu.com, *.tv.sohu.com, ap*.smzdm.com, gw-passenger.01zhuanche.com, mpcs.suning.com, ccsp-egmas.sf-express.com, consumer.fcbox.com, g.cdn.pengpengla.com, snailsleep.net, api*.futunn.com, ssl.kohsocialapp.qq.com, 4gimg.map.qq.com, r.inews.qq.com, news.ssp.qq.com, m.tuniu.com, mob.mddcloud.com, img*.10101111cdn.com, api.vuevideo.net, app.variflight.com, api.cdmcaac.com, api.vistopia.com.cn, app.wy.guahao.com, thor.weidian.com, api.wallstcn.com, api.xiachufang.com, api.psy-1.com, portal-xunyou.qingcdn.com, api.xueqiu.com, promo.xueqiu.com, 182.92.251.113, 101.201.175.228, www.xiaohongshu.com, app.yinxiang.com, restapi.iyunmai.com, api.zhihu.com, a.qiumibao.com, *.zhuishushenqi.com, www.zybang.com, api.izuiyou.com, tiku.zhan.com, webboot.zhangyue.com, weather-data.apple.com, saad.ms.zhangyue.net
+#[MITM]
+#enable = true
+#hostname = %APPEND% wq.jd.com, me-api.jd.com, trade-acs.m.taobao.com, api.m.jd.com, clientaccess.10086.cn, *.bilibili.com, music.163.com, draw.jdfcloud.com, jdjoy.jd.com, ios.baertt.com, app.kxp.com, wq.jd.com, act.10010.com, m.client.10010.com, ifac*.iqiyi.com, nebula.kuaishou.com, mp.weixin.qq.com, ms.jr.jd.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, ios.prod.ftl.netflix.com, api.21jingji.com, service.4gtv.tv, app.58.com, pic?.ajkimg.com, gw.alicdn.com, heic.alicdn.com, acs.m.taobao.com, m*.amap.com, api-new.app.acfun.cn, api.bjxkhc.com, *.amemv.com, *.snssdk.com, issuecdn.baidupcs.com, pan.baidu.com, newclient.map.baidu.com, mime.baidu.com, act.vip.iqiyi.com, app.bilibili.com, manga.bilibili.com, channel.beitaichufang.com, iapi.bishijie.com, app.api.ke.com, www.bodivis.com.cn, yxyapi*.drcuiyutao.com, cloud.189.cn, api.chelaile.net.cn, web.chelaile.net.cn, cap.caocaokeji.cn, api.caijingmobile.com, gw.csdn.net, m.ctrip.com, app.poizon.com, api.douban.com, rtbapi.douyucdn.cn, e.dangdang.com, daoyu.sdo.com, *.daydaycook.com, maicai.api.ddxq.mobi, mobile-api2011.elong.com, 123.59.31.1, 119.18.193.135, cube.elemecdn.com, i.ys7.com, www.flyertea.com, dsa-mfp.fengshows.cn, api.feng.com, *-release.wuta-cam.com, www.youtube.com, s.youtube.com, gateway.shouqiev.com, dl.app.gtja.com, prom.mobile.gome.com.cn, smkmp.96225.com, api.huomao.com, imeclient.openspeech.cn, api.intsig.net, ih2.ireader.com, nnapp.cloudbae.cn:0, ib-soft.net, www.inoreader.com, img*.360buyimg.com, api.jxedt.com, richmanapi.jxedt.com, *.kakamobi.cn, app-api.jinse.com, ios.wps.cn, *.kingsoft-office-service.com, api.gotokeep.com, api.kkmh.com, 122.14.246.33, 175.102.178.52, api.club.lenovo.cn, api.jr.mi.com, api-mifit*.huami.com, api.mgzf.com, cdn.moji.com, img.meituan.net, p*.meituan.net, s3plus.meituan.net, flowplus.meituan.net, capi.mwee.cn, mapi.mafengwo.cn, app.mixcapp.com, appconf.mail.163.com, c.m.163.com, client.mail.163.com, interface*.music.163.com, 59.111.181.*, sp.kaola.com, support.you.163.com, p.du.163.com, app-api.niu.com, slapi.oray.net, pss.txffp.com, api.yangkeduo.com, api.pinduoduo.com, mrobot.pconline.com.cn, mrobot.pcauto.com.cn, open.qyer.com, media.qyer.com, api.qbb6.com, mage.if.qidian.com, msspjh.emarbox.com, api.rr.tv, weibointl.api.weibo.cn, tqt.weibo.cn, *.k.sohu.com, *.tv.sohu.com, ap*.smzdm.com, gw-passenger.01zhuanche.com, mpcs.suning.com, ccsp-egmas.sf-express.com, consumer.fcbox.com, g.cdn.pengpengla.com, snailsleep.net, api*.futunn.com, ssl.kohsocialapp.qq.com, 4gimg.map.qq.com, r.inews.qq.com, news.ssp.qq.com, m.tuniu.com, mob.mddcloud.com, img*.10101111cdn.com, api.vuevideo.net, app.variflight.com, api.cdmcaac.com, api.vistopia.com.cn, app.wy.guahao.com, thor.weidian.com, api.wallstcn.com, api.xiachufang.com, api.psy-1.com, portal-xunyou.qingcdn.com, api.xueqiu.com, promo.xueqiu.com, 182.92.251.113, 101.201.175.228, www.xiaohongshu.com, app.yinxiang.com, restapi.iyunmai.com, api.zhihu.com, a.qiumibao.com, *.zhuishushenqi.com, www.zybang.com, api.izuiyou.com, tiku.zhan.com, webboot.zhangyue.com, weather-data.apple.com, saad.ms.zhangyue.net
