--- a/onetest.conf
+++ b/onetest.conf
@@ -553,10 +553,13 @@ DOMAIN-SUFFIX,licdn.com,PROXY
 DOMAIN-SUFFIX,soundcloud.com,PROXY
 DOMAIN-SUFFIX,sndcdn.com,PROXY
 DOMAIN-SUFFIX,t.me,PROXY
+DOMAIN-SUFFIX,tx.me,PROXY
 DOMAIN-SUFFIX,tdesktop.com,PROXY
 DOMAIN-SUFFIX,telegra.ph,PROXY
 DOMAIN-SUFFIX,telegram.me,PROXY
 DOMAIN-SUFFIX,telegram.org,PROXY
+DOMAIN-SUFFIX,graph.org,PROXY
+DOMAIN-SUFFIX,legra.ph,PROXY
 DOMAIN-SUFFIX,telesco.pe,PROXY
 IP-CIDR,91.108.56.0/22,PROXY,no-resolve
 IP-CIDR,91.108.4.0/22,PROXY,no-resolve
